// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination Event Pagination onPageChange - next 1`] = `
<div
  class="ob-pagination"
>
  <div
    class="ob-pagination__btn-prev"
  >
    <div
      class="ob-button ob-button--small"
    >
      <!---->
      <div
        class="ob-button__text"
      >
        
        pre
        
      </div>
    </div>
  </div>
  <div
    class="ob-pagination__number"
  >
    <span
      class="ob-pagination__number-current text"
    >
      2
    </span>
    /
    3
  </div>
  <div
    class="ob-pagination__btn-next"
  >
    <div
      class="ob-button ob-button--small"
    >
      <!---->
      <div
        class="ob-button__text"
      >
        
        next
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Pagination Event Pagination onPageChange - prev 1`] = `
<div
  class="ob-pagination"
>
  <div
    class="ob-pagination__btn-prev"
  >
    <div
      class="ob-button ob-button--small"
    >
      <!---->
      <div
        class="ob-button__text"
      >
        
        pre
        
      </div>
    </div>
  </div>
  <div
    class="ob-pagination__number"
  >
    <span
      class="ob-pagination__number-current text"
    >
      2
    </span>
    /
    5
  </div>
  <div
    class="ob-pagination__btn-next"
  >
    <div
      class="ob-button ob-button--small"
    >
      <!---->
      <div
        class="ob-button__text"
      >
        
        next
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Pagination Event Pagination onPageChange not to be called(disabled prev or next) 1`] = `
<div
  class="ob-pagination"
>
  <div
    class="ob-pagination__btn-prev"
  >
    <div
      class="ob-button ob-button--small ob-button--disabled"
    >
      <!---->
      <div
        class="ob-button__text"
      >
        
        pre
        
      </div>
    </div>
  </div>
  <div
    class="ob-pagination__number"
  >
    <span
      class="ob-pagination__number-current text"
    >
      1
    </span>
    /
    1
  </div>
  <div
    class="ob-pagination__btn-next"
  >
    <div
      class="ob-button ob-button--small ob-button--disabled"
    >
      <!---->
      <div
        class="ob-button__text"
      >
        
        next
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Pagination Snap render Pagination -- props current 1`] = `
<div
  class="ob-pagination"
>
  <div
    class="ob-pagination__btn-prev"
  >
    <div
      class="ob-button ob-button--small ob-button--disabled"
    >
      <!---->
      <div
        class="ob-button__text"
      >
        
        pre
        
      </div>
    </div>
  </div>
  <div
    class="ob-pagination__number"
  >
    <span
      class="ob-pagination__number-current text"
    >
      2
    </span>
    /
    1
  </div>
  <div
    class="ob-pagination__btn-next"
  >
    <div
      class="ob-button ob-button--small ob-button--disabled"
    >
      <!---->
      <div
        class="ob-button__text"
      >
        
        next
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Pagination Snap render Pagination -- props icon 1`] = `
<div
  class="ob-pagination ob-pagination--icon"
>
  <div
    class="ob-pagination__btn-prev"
  >
    <div
      class="ob-button ob-button--small ob-button--disabled"
    >
      <!---->
      <div
        class="ob-button__text"
      >
        
        <div
          class="ob-icon ob-icon-chevron-left text"
        />
        
      </div>
    </div>
  </div>
  <div
    class="ob-pagination__number"
  >
    <span
      class="ob-pagination__number-current text"
    >
      1
    </span>
    /
    1
  </div>
  <div
    class="ob-pagination__btn-next"
  >
    <div
      class="ob-button ob-button--small ob-button--disabled"
    >
      <!---->
      <div
        class="ob-button__text"
      >
        
        <div
          class="ob-icon ob-icon-chevron-right text"
        />
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Pagination Snap render Pagination -- props pageSize 1`] = `
<div
  class="ob-pagination"
>
  <div
    class="ob-pagination__btn-prev"
  >
    <div
      class="ob-button ob-button--small ob-button--disabled"
    >
      <!---->
      <div
        class="ob-button__text"
      >
        
        pre
        
      </div>
    </div>
  </div>
  <div
    class="ob-pagination__number"
  >
    <span
      class="ob-pagination__number-current text"
    >
      1
    </span>
    /
    1
  </div>
  <div
    class="ob-pagination__btn-next"
  >
    <div
      class="ob-button ob-button--small ob-button--disabled"
    >
      <!---->
      <div
        class="ob-button__text"
      >
        
        next
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Pagination Snap render Pagination -- props total 1`] = `
<div
  class="ob-pagination"
>
  <div
    class="ob-pagination__btn-prev"
  >
    <div
      class="ob-button ob-button--small ob-button--disabled"
    >
      <!---->
      <div
        class="ob-button__text"
      >
        
        pre
        
      </div>
    </div>
  </div>
  <div
    class="ob-pagination__number"
  >
    <span
      class="ob-pagination__number-current text"
    >
      1
    </span>
    /
    5
  </div>
  <div
    class="ob-pagination__btn-next"
  >
    <div
      class="ob-button ob-button--small"
    >
      <!---->
      <div
        class="ob-button__text"
      >
        
        next
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Pagination Snap render Pagination -- props total change 1`] = `
<div
  class="ob-pagination ob-pagination--icon"
>
  <div
    class="ob-pagination__btn-prev"
  >
    <div
      class="ob-button ob-button--small ob-button--disabled"
    >
      <!---->
      <div
        class="ob-button__text"
      >
        
        <div
          class="ob-icon ob-icon-chevron-left text"
        />
        
      </div>
    </div>
  </div>
  <div
    class="ob-pagination__number"
  >
    <span
      class="ob-pagination__number-current text"
    >
      1
    </span>
    /
    2
  </div>
  <div
    class="ob-pagination__btn-next"
  >
    <div
      class="ob-button ob-button--small"
    >
      <!---->
      <div
        class="ob-button__text"
      >
        
        <div
          class="ob-icon ob-icon-chevron-right text"
        />
        
      </div>
    </div>
  </div>
</div>
`;
